syntax = "proto3";

option csharp_namespace = "ClinicService.Protos";

package ClinicService.Protos;

service AuthenticateService {

	rpc Login (AuthenticationRequest) returns (AuthenticationResponse);
	rpc GetSessionInfo (GetSessionInfoRequest) returns (GetSessionInfoResponse);
}

message AuthenticationRequest {
        string userName = 1;
        string password = 2;
}

message AuthenticationResponse {
		int32 status = 1;
        SessionInfo sessionInfo = 2;
        int32 errCode = 3;
        string errMessage =4;
}

message GetSessionInfoRequest {
}

message GetSessionInfoResponse {
        SessionInfo sessionInfo = 2;
        int32 errCode = 3;
        string errMessage =4;
}

message SessionInfo
{
    int32 sessionId = 1;
    string sessionToken = 2;
    AccountDto account = 3;
}

message AccountDto
{
    int32 accountId = 1;
    string eMail = 2;
    bool locked = 3;
    string firstName = 4;
    string lastName = 5;
    string secondName = 6;
}